@@ -1,3 +1,6 @@
+17 Jun 2018
+fix: admin/iphistory.php display
+
 16 Jun 2018
 fix: several admin pages issues
 
